// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Dropdown Default 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": 300,
      }
    }
  >
    <div
      className="bx--dropdown__wrapper bx--list-box__wrapper"
      data-testid="dropdown"
    >
      <label
        className="bx--label"
        htmlFor="downshift-0-toggle-button"
        id="downshift-0-label"
      >
        Dropdown label
      </label>
      <div
        className="bx--dropdown iot--dropdown bx--list-box"
        id="default"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        <button
          aria-disabled={false}
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label downshift-0-toggle-button"
          className="bx--list-box__field"
          disabled={false}
          id="downshift-0-toggle-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          <span
            className="bx--list-box__label"
          >
            Dropdown menu options
          </span>
          <div
            className="bx--list-box__menu-icon"
          >
            <svg
              aria-hidden={true}
              fill="currentColor"
              focusable="false"
              height={16}
              name="chevron--down"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
              <title />
            </svg>
          </div>
        </button>
        <div
          aria-labelledby="downshift-0-label"
          className="bx--list-box__menu"
          id="downshift-0-menu"
          onBlur={[Function]}
          onKeyDown={[Function]}
          onMouseLeave={[Function]}
          role="listbox"
          tabIndex={-1}
        />
      </div>
      <div
        className="bx--form__helper-text"
      >
        This is some helper text
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Dropdown Inline 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": 600,
      }
    }
  >
    <div
      className="bx--dropdown__wrapper bx--list-box__wrapper bx--dropdown__wrapper--inline bx--list-box__wrapper--inline"
      data-testid="dropdown"
    >
      <label
        className="bx--label"
        htmlFor="downshift-0-toggle-button"
        id="downshift-0-label"
      >
        Inline dropdown label
      </label>
      <div
        className="bx--dropdown iot--dropdown bx--dropdown--inline bx--list-box"
        id="inline"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        <button
          aria-disabled={false}
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label downshift-0-toggle-button"
          className="bx--list-box__field"
          disabled={false}
          id="downshift-0-toggle-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          <span
            className="bx--list-box__label"
          >
            Dropdown menu options
          </span>
          <div
            className="bx--list-box__menu-icon"
          >
            <svg
              aria-hidden={true}
              fill="currentColor"
              focusable="false"
              height={16}
              name="chevron--down"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
              <title />
            </svg>
          </div>
        </button>
        <div
          aria-labelledby="downshift-0-label"
          className="bx--list-box__menu"
          id="downshift-0-menu"
          onBlur={[Function]}
          onKeyDown={[Function]}
          onMouseLeave={[Function]}
          role="listbox"
          tabIndex={-1}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Dropdown Playground 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": 300,
      }
    }
  >
    <div
      className="bx--dropdown__wrapper bx--list-box__wrapper"
      data-testid="dropdown"
    >
      <label
        className="bx--label"
        htmlFor="downshift-0-toggle-button"
        id="downshift-0-label"
      >
        Dropdown label
      </label>
      <div
        aria-label="Dropdown"
        className="bx--dropdown iot--dropdown bx--list-box"
        id="carbon-dropdown-example"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        <button
          aria-disabled={false}
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label downshift-0-toggle-button"
          className="bx--list-box__field"
          disabled={false}
          id="downshift-0-toggle-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          <span
            className="bx--list-box__label"
          >
            Dropdown menu options
          </span>
          <div
            className="bx--list-box__menu-icon"
          >
            <svg
              aria-hidden={true}
              fill="currentColor"
              focusable="false"
              height={16}
              name="chevron--down"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
              <title />
            </svg>
          </div>
        </button>
        <div
          aria-labelledby="downshift-0-label"
          className="bx--list-box__menu"
          id="downshift-0-menu"
          onBlur={[Function]}
          onKeyDown={[Function]}
          onMouseLeave={[Function]}
          role="listbox"
          tabIndex={-1}
        />
      </div>
      <div
        className="bx--form__helper-text"
      >
        This is some helper text.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Dropdown Skeleton 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": 300,
      }
    }
  >
    <div
      className="bx--skeleton bx--dropdown-v2 bx--list-box bx--form-item"
    >
      <div
        className="bx--list-box__field"
      >
        <span
          className="bx--list-box__label"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Dropdown with icons and labels 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": "300px",
      }
    }
  >
    <div
      className="bx--dropdown__wrapper bx--list-box__wrapper"
      data-testid="dropdown"
    >
      <label
        className="bx--label"
        htmlFor="downshift-0-toggle-button"
        id="downshift-0-label"
      >
        Dropdown label
      </label>
      <div
        aria-label="Dropdown"
        className="bx--dropdown iot--dropdown bx--list-box"
        id="some-dropdown-id"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        <button
          aria-disabled={false}
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label downshift-0-toggle-button"
          className="bx--list-box__field"
          disabled={false}
          id="downshift-0-toggle-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          <span
            className="bx--list-box__label"
          >
            Dropdown menu options
          </span>
          <div
            className="bx--list-box__menu-icon"
          >
            <svg
              aria-hidden={true}
              fill="currentColor"
              focusable="false"
              height={16}
              name="chevron--down"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
              <title />
            </svg>
          </div>
        </button>
        <div
          aria-labelledby="downshift-0-label"
          className="bx--list-box__menu"
          id="downshift-0-menu"
          onBlur={[Function]}
          onKeyDown={[Function]}
          onMouseLeave={[Function]}
          role="listbox"
          tabIndex={-1}
        />
      </div>
      <div
        className="bx--form__helper-text"
      >
        This is some helper text.
      </div>
    </div>
  </div>
</div>
`;
